fix misleading log message in ReplicationCoordinatorImpl::_startElectSelfIfEligibleV1()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.4, 3.5.5
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      ReplicationCoordinatorImpl::_startElectSelfIfEligibleV1() logs one of the 2 following messages just before starting an election:

      • Starting an election for a priority takeover
      • Starting an election, since we've seen no PRIMARY in the past ... ms

      A successful step up request will also cause the second message to be logged, which can be misleading.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: