SERVER-28275 fixed election log message in ReplicationCoordinatorImpl::_startElectSelfIfEligibleV1()